--- a/iso/framework/files/system/oem/00_llmos-rootfs.yaml
+++ b/iso/framework/files/system/oem/00_llmos-rootfs.yaml
@@ -6,13 +6,13 @@ stages:
       providers: ["aws", "gcp", "openstack", "cdrom"]
       path: "/oem"
   rootfs:
-  - if: '[ ! -f "/run/cos/recovery_mode" ]'
+  - if: '[ ! -f "/run/elemental/recovery_mode" ]'
     name: "Layout configuration"
-    environment_file: /run/cos/cos-layout.env
+    environment_file: /run/elemental/mount-layout.env
     environment:
       OVERLAY: "tmpfs:25%"
   initramfs:
-  - if: '[ ! -f /run/cos/recovery_mode ]'
+  - if: '[ ! -f /run/elemental/recovery_mode ]'
     commands:
     - |
       if [ ! -e /usr/local/etc/hostname ]; then
@@ -20,14 +20,14 @@ stages:
         echo llmos-${RANDOM} > /usr/local/etc/hostname
       fi
       ln -sf /usr/local/etc/hostname /etc/hostname
-  - if: '[ ! -f "/run/cos/recovery_mode" ]'
+  - if: '[ ! -f "/run/elemental/recovery_mode" ]'
     name: "Persist /etc/machine-id"
     commands:
     - |
       # persist machine-id
-      if [ -s /run/cos/persistent/etc/machine-id ]; then
-        cat /run/cos/persistent/etc/machine-id > /etc/machine-id
+      if [ -s /run/elemental/persistent/etc/machine-id ]; then
+        cat /run/elemental/persistent/etc/machine-id > /etc/machine-id
       else
-        mkdir -p /run/cos/persistent/etc
-        cp /etc/machine-id /run/cos/persistent/etc
+        mkdir -p /run/elemental/persistent/etc
+        cp /etc/machine-id /run/elemental/persistent/etc
       fi
