--- a/iso/framework/files/system/oem/03_branding.yaml
+++ b/iso/framework/files/system/oem/03_branding.yaml
@@ -2,7 +2,24 @@ name: "Branding"
 stages:
   initramfs:
   - name: "Branding"
-    if: '[ -f "/run/cos/live_mode" ]'
+    if: '[ -f "/run/elemental/active_mode" ]'
+    files:
+    - path: /etc/issue
+      content: |
+        ┌──────────────────────────────────┐
+        │  _     _     __  __  ___  ____   │
+        │ | |   | |   |  \/  |/ _ \/ ___|  │
+        │ | |   | |   | |\/| | | | \___ \  │
+        │ | |___| |___| |  | | |_| |___) | │
+        │ |_____|_____|_|  |_|\___/|____/  │
+        └──────────────────────────────────┘
+          Welcome to LLMOS-\S !
+          IP address \4
+      permissions: 0644
+      owner: 0
+      group: 0
+  - name: "Branding"
+    if: '[ -f "/run/elemental/live_mode" ]'
     files:
     - path: /etc/issue
       content: |
@@ -20,7 +37,7 @@ stages:
       owner: 0
       group: 0
   - name: "Branding"
-    if: '[ -f "/run/cos/passive_mode" ]'
+    if: '[ -f "/run/elemental/passive_mode" ]'
     files:
     - path: /etc/issue
       content: |
@@ -57,5 +74,5 @@ stages:
       group: 0
   boot:
   - name: "Recovery"
-    if: '[ -f "/run/cos/recovery_mode" ]'
+    if: '[ -f "/run/elemental/recovery_mode" ]'
     hostname: "recovery"
