--- a/iso/framework/files/system/oem/99_k3s_service.yaml
+++ b/iso/framework/files/system/oem/99_k3s_service.yaml
@@ -1,6 +1,6 @@
 name: "Start k3s service"
 stages:
   network.after:
-    - if: '[ ! -f /run/cos/live_mode ] && [ ! -f /run/cos/recovery_mode ]'
+    - if: '[ ! -f /run/elemental/live_mode ] && [ ! -f /run/elemental/recovery_mode ]'
       commands:
         - systemctl start k3s.service
