--- a/pkg/config/templates/cos_rootfs.yaml
+++ b/pkg/config/templates/cos_rootfs.yaml
@@ -1,6 +1,6 @@
-if: '[ ! -f "/run/cos/recovery_mode" ]'
+if: '[ ! -f "/run/elemental/recovery_mode" ]'
 name: "Rootfs Layout overwrite"
-environment_file: /run/cos/cos-layout.env
+environment_file: /run/elemental/mount-layout.env
 environment:
   VOLUMES: "LABEL=COS_OEM:/oem LABEL=COS_PERSISTENT:/usr/local{{ if .HasDataPartition }} LABEL=LLMOS_DATA_PERSISTENT:/var/lib/llmos-data{{ end }}"
   OVERLAY: "tmpfs:25%"
