--- a/pkg/config/templates/cos_rootfs.yaml
+++ b/pkg/config/templates/cos_rootfs.yaml
@@ -1,4 +1,4 @@
-if: '[ ! -f "/run/cos/recovery_mode" ]'
+if: '[ ! -f "/run/elemental/recovery_mode" ]'
 name: "Rootfs Layout overwrite"
 environment_file: /run/cos/cos-layout.env
 environment:
