--- a/iso/images/leap/Dockerfile
+++ b/iso/images/leap/Dockerfile
@@ -156,7 +156,13 @@ RUN rm /var/lib/dbus/machine-id || true
 RUN rm /etc/hostname || true
 
 # Generate initrd with required elemental services
-RUN elemental init immutable-rootfs,grub-config,grub-default-bootargs,elemental-setup,dracut-config --debug --force
+#RUN elemental init immutable-rootfs,grub-config,grub-default-bootargs,elemental-setup,dracut-config --debug --force --config-dir /etc/llmos
+RUN elemental init immutable-rootfs,grub-config,grub-default-bootargs,elemental-setup,dracut-config --debug --force  && \
+    kernel=$(ls /boot/Image-* | head -n1) && \
+    if [ -e "$kernel" ]; then ln -sf "${kernel#/boot/}" /boot/vmlinuz; fi && \
+    rm -rf /var/log/update* && \
+    >/var/log/lastlog && \
+    rm -rf /boot/vmlinux*
 
 # Good for validation after the build
 CMD /bin/bash
