support load external config file

--- a/config-example.yaml
+++ b/config-example.yaml
@@ -1,16 +1,16 @@
 # Example of LLMOS config
+version: v1.0
 install:
   device: /dev/sda
-  data_device: /dev/sdb
-  iso_url: http://my-server/llmos-leap.iso
+  data-device: /dev/sdb
+  iso: http://my-server/llmos-leap.iso
   reboot: true
   poweroff: false
-  debug: true
 os:
-  ssh_authorized_keys:
+  ssh-authorized-keys:
   - ssh-rsa AAAAB3NzaC1yc2EAAAADAQAB...
-  - github:guangbochen
-  write_files:
+  - github:user1
+  write-files:
   - encoding: ""
     content: |-
       #!/bin/bash
@@ -18,34 +18,24 @@ os:
     owner: root
     path: /etc/local.d/example.start
     permissions: '0755'
-  hostname: myhost
-  init_cmd:
-  - "echo hello, init command"
-  boot_cmd:
-  - "echo hello, boot command"
-  run_cmd:
-  - "echo hello, run command"
-  data_sources:
-  - aws
-  - cdrom
+  hostname: llmos-node1
   modules:
   - kvm
   - nvme
   sysctl:
     kernel.printk: "4 4 1 7"
     kernel.kptr_restrict: "1"
-  dns_nameservers:
+  dns-nameservers:
   - 8.8.8.8
   - 1.1.1.1
-  ntp_servers:
+  ntp-servers:
   - 0.us.pool.ntp.org
   - 1.us.pool.ntp.org
   password: mypasswd
   environment:
-    http_proxy: http://myserver
-    https_proxy: http://myserver
-  k3s:
-    token: mytoken
-    node-external-ip: my-external-node-ip
-    disable:
-    - servicelb
+    http-proxy: http://myserver
+    https-proxy: http://myserver
+  token: mytoken
+  node-label:
+  - llmos.ai/gpu-type=a100
+  - llmos.ai/region=region_x
