--- a/iso/framework/files/usr/lib/systemd/system/change-console-log.service
+++ b/iso/framework/files/usr/lib/systemd/system/change-console-log.service
@@ -1,8 +1,7 @@
 [Unit]
-Description=Change default console log level
+Description=Change Default Console Log Level
 DefaultDependencies=no
-Wants=network-online.target
-After=network-online.target
+Before=network-online.target
 # Do not run this on live or recovery mode
 ConditionPathExists=!/run/cos/live_mode
 ConditionPathExists=!/run/cos/recovery_mode
@@ -10,7 +9,7 @@ ConditionPathExists=!/run/cos/recovery_mode
 [Service]
 Type=oneshot
 RemainAfterExit=yes
-ExecStart=-/usr/sbin/update-console-loglevel
+ExecStart=/usr/sbin/update-console-loglevel
 
 [Install]
 WantedBy=multi-user.target
