--- a/iso/manifest.yaml
+++ b/iso/manifest.yaml
@@ -1,6 +1,6 @@
 iso:
   label: "COS_LIVE"
   bootloader-in-rootfs: true
-  grub-entry-name: "LLMOS Installer-upgrade"
+  grub-entry-name: "LLMOS Installer"
 
 squash-no-compression: true
