--- a/iso/framework/files/system/oem/03_branding.yaml
+++ b/iso/framework/files/system/oem/03_branding.yaml
@@ -1,6 +1,9 @@
 name: "Branding"
 stages:
   initramfs:
+  - if: '[ ! -f /etc/hostname ]'
+    commands:
+      - sysctl kernel.hostname=llmos-${RANDOM}
   - name: "Branding"
     if: '[ -f "/run/elemental/live_mode" ]'
     files:
