--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -87,6 +87,6 @@ jobs:
         FLAVOR: "leap"
         VERSION: ${{ steps.get_ref_name.outputs.ref_name }}
     - name: Build ISO
-      run: make build-iso-local
+      run: make build-iso
       env:
         VERSION: ${{ steps.get_ref_name.outputs.ref_name }}
