--- a/iso/framework/files/system/oem/03_branding.yaml
+++ b/iso/framework/files/system/oem/03_branding.yaml
@@ -10,11 +10,11 @@ stages:
         │  _     _     __  __  ___  ____   │
         │ | |   | |   |  \/  |/ _ \/ ___|  │
         │ | |   | |   | |\/| | | | \___ \  │
-        │ | |___| |___| |  | | |_| |___) | │
-        │ |_____|_____|_|  |_|\___/|____/  │
+        │ | |___| |___| | | |  |_| |___) | │
+        │ |_____|_____|_| |_|\___/||____/  │
         └──────────────────────────────────┘
-          Welcome to LLMOS-\S !
-          IP address \4
+          Welcome to \S !
+          IP address: \4
           Start the installer with "llmos install" to install it in the local system
       permissions: 0644
       owner: 0
@@ -28,11 +28,11 @@ stages:
         │  _     _     __  __  ___  ____   │
         │ | |   | |   |  \/  |/ _ \/ ___|  │
         │ | |   | |   | |\/| | | | \___ \  │
-        │ | |___| |___| |  | | |_| |___) | │
-        │ |_____|_____|_|  |_|\___/|____/  │
+        │ | |___| |___| | | | ||_| |___) | │
+        │ |_____|_____|_| |_|\___/||____/  │
         └──────────────────────────────────┘
-          Welcome to LLMOS-\S !
-          IP address \4
+          Welcome to \S !
+          IP address: \4
           There might be an issue with the active partition, booted in passive.
       permissions: 0644
       owner: 0
@@ -46,10 +46,10 @@ stages:
         │  _     _     __  __  ___  ____   │
         │ | |   | |   |  \/  |/ _ \/ ___|  │
         │ | |   | |   | |\/| | | | \___ \  │
-        │ | |___| |___| |  | | |_| |___) | │
-        │ |_____|_____|_|  |_|\___/|____/  │
+        │ | |___| |___| | | | ||_| |___) | │
+        │ |_____|_____|_| |_|\___/||____/  │
         └──────────────────────────────────┘
-          Welcome to LLMOS-\S !
+          Welcome to \S !
           IP address \4
           Reset the active system with "elemental reset".
       permissions: 0644
