--- a/pkg/config/templates/llmos-operator-charts.yaml
+++ b/pkg/config/templates/llmos-operator-charts.yaml
@@ -2,11 +2,11 @@
 apiVersion: helm.cattle.io/v1
 kind: HelmChart
 metadata:
-  name: llmos-controller
+  name: llmos-operator
   namespace: kube-system
 spec:
   repo: http://llmos-repo.llmos-system/charts
-  chart: llmos-controller
+  chart: llmos-operator
   targetNamespace: llmos-system
 ---
 apiVersion: helm.cattle.io/v1
