--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -43,6 +43,7 @@ jobs:
       uses: docker/setup-buildx-action@v3
       with:
         buildkitd-flags: --debug
+    - run: make test && make lint
     - name: Install GoReleaser
       uses: goreleaser/goreleaser-action@v6
       with:
